--- a/index.html
+++ b/index.html
@@ -20,15 +20,5 @@
 
     <h2> Temp in Fahrenheit:</h2>
 </body>
-
-<script type="text/javaScript">
-
-function convert() {
-var kelvin = document.getElementById('kTemp');
-console.log(kelvin);
-
-}
-
-</script>
-
+<script type="text/javascript" src="script.js"></script>
 </html>
